//
// Copyright 2021 DXOS.org
//

syntax = "proto3";

import "dxos/halo/keys.proto";

package dxos.echo.invitation_protocol;

// Mock invitation process for data spaces

message AdmitRequest {
  dxos.halo.keys.PubKey memberKey = 1;
  dxos.halo.keys.PubKey controlFeedKey = 2;
  dxos.halo.keys.PubKey dataFeedKey = 3;
}

// Inviter verbs
service InviterInvitationService {
  rpc Admit(AdmitRequest) returns (google.protobuf.Empty);
}

message AcceptRequest {
  dxos.halo.keys.PubKey spaceKey = 1;
  dxos.halo.keys.PubKey genesisFeedKey = 3;
}

// Invitee verbs
service InviteeInvitationService {
  rpc Accept(AcceptRequest) returns (google.protobuf.Empty);
}
